Fix header gap.

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 3.5rem;
+  padding-top: 66px;
   /* padding-bottom: 3rem; */
   color: #5a5a5a;
   background-color: #f5f5f5;
